# cppstdlib

./: CMakeLists.txt  CMakePresets.json  README.md  cppstdlib.code-workspace  lib.cc  lib.h  main.cc  tests.cc  tests.cost_no_arg.approved.txt  tests.depends_no_names.approved.txt  tests.directive_outside_block.approved.txt  tests.duplicate_package.approved.txt  tests.duplicate_task.approved.txt  tests.feature_multiple_names.approved.txt  tests.full_sample.approved.txt  tests.invalid_cost.approved.txt  tests.invalid_size.approved.txt  tests.invalid_version.approved.txt  tests.package_cycle.approved.txt  tests.package_missing_version.approved.txt  tests.parse_error.approved.txt  tests.requires_no_tasks.approved.txt  tests.sample_config_output.approved.txt  tests.size_no_arg.approved.txt  tests.task_cycle.approved.txt  tests.task_missing_cost.approved.txt  tests.task_missing_name.approved.txt  tests.task_missing_uses.approved.txt  tests.task_requires_unknown_task.approved.txt  tests.task_uses_unknown_package.approved.txt  tests.unknown_package_dependency.approved.txt  tests.unknown_package_directive.approved.txt  tests.unknown_task_directive.approved.txt  tests.uses_no_package.approved.txt  tests.validation_error.approved.txt  tests.version_no_arg.approved.txt
